--- a/wangxy/XY_rasa_01/README
+++ b/wangxy/XY_rasa_01/README
@@ -1,6 +1,5 @@
-# Configuration for Rasa NLU.
-# https://rasa.com/docs/rasa/nlu/components/
-language: en
+Official recommended configuration
+Data language is English.
 
 pipeline:
   - name: ConveRTTokenizer
@@ -17,12 +16,3 @@ pipeline:
   - name: EntitySynonymMapper
   - name: ResponseSelector
     epochs: 100
-
-# Configuration for Rasa Core.
-# https://rasa.com/docs/rasa/core/policies/
-policies:
-  - name: MemoizationPolicy
-  - name: TEDPolicy
-    max_history: 5
-    epochs: 100
-  - name: MappingPolicy
